LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Approval__c/sfpm_Approval__c.object-meta.xml
<CustomObject>
    <description>2020-01-13 - N. Ehrmann - Part of the sfpm (Salesforce Project Management) collection of objects. Approvals sit underneath Tasks and track go/no-go decisions throughout the organization.</description>
    <label>Approval</label>
    <nameField>
        <displayFormat>APP-{000000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>