LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Approval__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-14 - N. Ehrmann - The approver.</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>