LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Approval__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <description>2020-01-14 - N. Ehrmann - Comments from the approver.</description>
    <label>Approver Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>