LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Approval__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <description>2020-01-14 - The reason for not approving the request.</description>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>