LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Approval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The status of the approval request.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
                <default>true</default>
                <label>Waiting</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>