LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Approval__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>2020-01-14 - N. Ehrmann - A short summary of why this approval is required.</description>
    <label>Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>