LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Approval__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-14 - N. Ehrmann - The task which requires approval.</description>
    <label>Task</label>
    <referenceTo>sfpm_Task__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>